--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.ci-cmg</groupId>
@@ -32,7 +30,7 @@
     <connection>scm:git:git@github.com:CI-CMG/aws-s3-outputstream.git</connection>
     <developerConnection>scm:git:git@github.com:CI-CMG/aws-s3-outputstream.git</developerConnection>
     <url>https://github.com/CI-CMG/aws-s3-outputstream</url>
-    <tag>HEAD</tag>
+    <tag>1.0</tag>
   </scm>
 
   <distributionManagement>
