--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.ci-cmg</groupId>
   <artifactId>aws-s3-outputstream</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -30,7 +30,7 @@
     <connection>scm:git:git@github.com:CI-CMG/aws-s3-outputstream.git</connection>
     <developerConnection>scm:git:git@github.com:CI-CMG/aws-s3-outputstream.git</developerConnection>
     <url>https://github.com/CI-CMG/aws-s3-outputstream</url>
-    <tag>1.0</tag>
+    <tag>v1.0.0</tag>
   </scm>
 
   <distributionManagement>
