--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "trunk" ]
+    branches: [ "trunk", "1.1" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "trunk" ]
+    branches: [ "trunk", "1.1" ]
   schedule:
     - cron: '42 10 * * 5'
 
